Spacing issues.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1691,5 +1691,5 @@ input, select, textarea {
 }
 
 .work-div h2 {
-	width: 50%;
+	width: 30%;
 }
